a little cleanup and added stub for dashboard bundle

--- a/src/Silnin/SilninBsgDashboardBundle/Resources/views/Dashboard/showDashboard.html.twig
+++ b/src/Silnin/SilninBsgDashboardBundle/Resources/views/Dashboard/showDashboard.html.twig
@@ -1,5 +1,9 @@
-<html>
-<body>
-bad ass profile zeg
-</body>
-</html>
+{% block head %}
+    {#<link rel="icon" sizes="16x16" href="{{ asset('bundles/silninuser/images/cylon.ico') }}" />#}
+    {#<link rel="stylesheet" href="{{ asset('bundles/silninuser/css/style.css') }}" />#}
+{% endblock %}
+{#{% block title 'Battlestar Galactica Sheet' %}#}
+
+{% block body %}
+    bad ass profile zeg jij user {{ hop }}
+{% endblock %}
