--- a/src/Silnin/BsgSheet/DashboardBundle/Resources/views/Dashboard/showDashboard.html.twig
+++ b/src/Silnin/BsgSheet/DashboardBundle/Resources/views/Dashboard/showDashboard.html.twig
@@ -4,6 +4,60 @@
 {% endblock %}
 {#{% block title 'Battlestar Galactica Sheet' %}#}
 
-{% block body %}
-    bad ass profile zeg jij user {{ hop }}
+{% block body -%}
+    {{ menu }}<br/>
+
+    <h1>Character list</h1>
+
+    <table class="records_list">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Createdate</th>
+            <th>Description</th>
+            <th>Homeworld</th>
+            <th>Callsign</th>
+            <th>Plotpoints</th>
+            <th>Advancementpoints</th>
+            <th>Woundrating</th>
+            <th>Stunrating</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for entity in entities %}
+            <tr>
+                <td><a href="{{ path('character_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                <td>{{ entity.name }}</td>
+                <td>{% if entity.createDate %}{{ entity.createDate|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{{ entity.description }}</td>
+                <td>{{ entity.homeworld }}</td>
+                <td>{{ entity.callsign }}</td>
+                <td>{{ entity.plotPoints }}</td>
+                <td>{{ entity.advancementPoints }}</td>
+                <td>{{ entity.woundRating }}</td>
+                <td>{{ entity.stunRating }}</td>
+                <td>
+                    <ul>
+                        <li>
+                            <a href="{{ path('character_show', { 'id': entity.id }) }}">show</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('character_edit', { 'id': entity.id }) }}">edit</a>
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <ul>
+        <li>
+            <a href="{{ path('character_new') }}">
+                Create a new entry
+            </a>
+        </li>
+    </ul>
 {% endblock %}
