Created MenuController that is being called from the dashboard template

--- a/src/Silnin/BsgSheet/DashboardBundle/Resources/views/Dashboard/showDashboard.html.twig
+++ b/src/Silnin/BsgSheet/DashboardBundle/Resources/views/Dashboard/showDashboard.html.twig
@@ -5,7 +5,12 @@
 {#{% block title 'Battlestar Galactica Sheet' %}#}
 
 {% block body -%}
-    {{ menu }}<br/>
+    <div id="menu">
+        {{ render(controller(
+            'DashboardBundle:Menu:dashboardMenu',
+            {}
+        )) }}
+    </div>
 
     <h1>Character list</h1>
 
