refactor security check out of controller into security service and added menu to character pages

--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/new.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/new.html.twig
@@ -1,6 +1,12 @@
 {% extends '::base.html.twig' %}
-
 {% block body -%}
+    <div id="menu">
+        {{ render(controller(
+        'DashboardBundle:Menu:dashboardMenu',
+        {}
+        )) }}
+    </div>
+
     <h1>Character creation</h1>
 
     {{ form(form) }}
