--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/show.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/show.html.twig
@@ -1,6 +1,13 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
+    <div id="menu">
+        {{ render(controller(
+        'DashboardBundle:Menu:dashboardMenu',
+        {}
+        )) }}
+    </div>
+
     <h1>Character</h1>
 
     <table class="record_properties">
