fix links in templates

--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/edit.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/edit.html.twig
@@ -14,8 +14,8 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('character') }}">
-            Back to the list
+        <a href="{{ path('dashboard') }}">
+            Back to my dashboard
         </a>
     </li>
     <li>{{ form(delete_form) }}</li>
