--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/show.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/show.html.twig
@@ -57,8 +57,8 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('character') }}">
-            Back to the list
+        <a href="{{ path('dashboard') }}">
+            Back to the my dashboard
         </a>
     </li>
     <li>
