--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/index.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/index.html.twig
@@ -50,7 +50,7 @@
         <ul>
         <li>
             <a href="{{ path('character_new') }}">
-                Create a new entry
+                Create new character
             </a>
         </li>
     </ul>
