--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/new.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/new.html.twig
@@ -13,8 +13,8 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('character') }}">
-            Back to the list
+        <a href="{{ path('dashboard') }}">
+            Back to my dashboard
         </a>
     </li>
 </ul>
