fix login link of frontpage

--- a/src/Silnin/BsgSheet/FrontpageBundle/Resources/views/Frontpage/menu.html.twig
+++ b/src/Silnin/BsgSheet/FrontpageBundle/Resources/views/Frontpage/menu.html.twig
@@ -5,5 +5,5 @@
     <a href="{{ app.request.baseUrl }}/logout">logout</a>
 {% else %}
     <a href="{{ app.request.baseUrl }}/register">register</a> |
-    <a href="{{ app.request.baseUrl }}/login">dashboard</a>
+    <a href="{{ app.request.baseUrl }}/dashboard">login</a>
 {% endif %}
