fix character create dependencies and typo in form template

--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/show.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Character/show.html.twig
@@ -58,7 +58,7 @@
         <ul class="record_actions">
     <li>
         <a href="{{ path('dashboard') }}">
-            Back to the my dashboard
+            Back to my dashboard
         </a>
     </li>
     <li>
