--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Attribute/editAttributes.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Attribute/editAttributes.html.twig
@@ -2,6 +2,7 @@
     <link rel="stylesheet" href="{{ asset('bundles/character/css/style.css') }}" />
 {% endblock %}
 
+
 {% block body -%}
     <div id="menu">
         {{ render(controller(
@@ -10,6 +11,12 @@
         )) }}
     </div>
 
+    {% for flashMessage in app.session.flashbag.get('notice') %}
+        <div class="flash-notice">
+            {{ flashMessage }}
+        </div>
+    {% endfor %}
+    
     <h1>Buy your attributes!</h1>
     <a href="{{ path('character_show', { 'id': characterId }) }}">Back to {{ character.getName }}</a>
     <br/>
