--- a/src/Silnin/BsgSheet/DashboardBundle/Resources/views/Dashboard/showDashboard.html.twig
+++ b/src/Silnin/BsgSheet/DashboardBundle/Resources/views/Dashboard/showDashboard.html.twig
@@ -1,7 +1,7 @@
 {% block head %}
-    <link rel="stylesheet" href="{{ asset('bundles/character/css/style.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/character/css/style.css') }}"
+
     {#<link rel="icon" sizes="16x16" href="{{ asset('bundles/silninuser/images/cylon.ico') }}" />#}
-    {#<link rel="stylesheet" href="{{ asset('bundles/silninuser/css/style.css') }}" />#}
 {% endblock %}
 {#{% block title 'Battlestar Galactica Sheet' %}#}
 
@@ -99,3 +99,6 @@
     </ul>
     {% endblock %}
 {% endblock %}
+
+<script type="text/javascript" src="/lib/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="{{ asset('bundles/dashboard/javascript/dashboard.js')}}" ></script>
