--- a/src/Silnin/BsgSheet/DashboardBundle/Resources/views/Dashboard/showDashboard.html.twig
+++ b/src/Silnin/BsgSheet/DashboardBundle/Resources/views/Dashboard/showDashboard.html.twig
@@ -1,104 +1,122 @@
-{% block head %}
-    <link rel="stylesheet" href="{{ asset('bundles/character/css/style.css') }}"
-
-    {#<link rel="icon" sizes="16x16" href="{{ asset('bundles/silninuser/images/cylon.ico') }}" />#}
-{% endblock %}
-{#{% block title 'Battlestar Galactica Sheet' %}#}
-
-{% block body -%}
-    {% block menu -%}
-    <div id="menu">
-        {{ render(controller(
-            'DashboardBundle:Menu:dashboardMenu',
-            {}
-        )) }}
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    {% block head %}
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{{ asset('bundles/dashboard/css/style.css') }}"
     {% endblock %}
-
-    {% block flash -%}
-        {% for flashMessage in app.session.flashbag.get('notice') %}
-            <div class="flash-notice">
-                {{ flashMessage }}
+</head>
+<body>
+<div class="container">
+    {% block body -%}
+        {% block menu -%}
+            <div id="menu">
+                {{ render(controller(
+                'DashboardBundle:Menu:dashboardMenu',
+                {}
+                )) }}
             </div>
-        {% endfor %}
+        {% endblock %}
+
+        {% block flash -%}
+            {% for flashMessage in app.session.flashbag.get('notice') %}
+                <div class="flash-notice">
+                    {{ flashMessage }}
+                </div>
+            {% endfor %}
+        {% endblock %}
+
+        {% block content -%}
+            <h1>Character list</h1>
+
+            <table class="records_list">
+                <thead>
+                <tr>
+                    {#<th>Id</th>#}
+                    <th>Name</th>
+                    <th>Createdate</th>
+                    <th>Callsign</th>
+                    <th>AP</th>
+                    <th>Attributes</th>
+                    <th>Actions</th>
+
+                    {#<th>Description</th>#}
+                    {#<th>Homeworld</th>#}
+                    {#<th>Plotpoints</th>#}
+
+                    {#<th>Woundrating</th>#}
+                    {#<th>Stunrating</th>#}
+
+                </tr>
+                </thead>
+                <tbody>
+                {% for entity in entities %}
+                    <tr>
+                        {#<td><a href="{{ path('character_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>#}
+                        <td>{{ entity.name }}</td>
+                        <td>{% if entity.createDate %}{{ entity.createDate|date('Y-m-d H:i:s') }}{% endif %}</td>
+                        {#<td>{{ entity.description }}</td>#}
+                        {#<td>{{ entity.homeworld }}</td>#}
+                        <td>{{ entity.getRank.getName }} {{ entity.callsign }}</td>
+                        {#<td>{{ entity.plotPoints }}</td>#}
+                        <td>{{ entity.advancementPoints }}</td>
+                        {#<td>{{ entity.woundRating }}</td>#}
+                        {#<td>{{ entity.stunRating }}</td>#}
+                        <td>
+                            <table>
+                                {% for attribute in entity.getAttributes %}
+                                    <tr>
+                                        <td>{{ attribute.getType }}</td>
+                                        <td>
+                                            {{ render(controller(
+                                            'CharacterBundle:Die:translateDie',
+                                            { 'step': attribute.getStep }
+                                            )) }}
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </table>
+                        </td>
+
+                        <td>
+                            <ul>
+                                <li>
+                                    <a href="{{ path('character_show', { 'id': entity.id }) }}">show</a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('character_edit', { 'id': entity.id }) }}">edit</a>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+
+            <ul>
+                <li>
+                    <a href="{{ path('character_new') }}">
+                        Create a new entry
+                    </a>
+                </li>
+            </ul>
+        {% endblock %}
     {% endblock %}
+</div>
+</body>
+<!-- AngularJS -->
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 
-    {% block content -%}
-    <h1>Character list</h1>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-    <table class="records_list">
-        <thead>
-        <tr>
-            {#<th>Id</th>#}
-            <th>Name</th>
-            <th>Createdate</th>
-            <th>Callsign</th>
-            <th>AP</th>
-            <th>Attributes</th>
-            <th>Actions</th>
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-            {#<th>Description</th>#}
-            {#<th>Homeworld</th>#}
-            {#<th>Plotpoints</th>#}
+<!-- Latest compiled JavaScript -->
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-            {#<th>Woundrating</th>#}
-            {#<th>Stunrating</th>#}
 
-        </tr>
-        </thead>
-        <tbody>
-        {% for entity in entities %}
-            <tr>
-                {#<td><a href="{{ path('character_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>#}
-                <td>{{ entity.name }}</td>
-                <td>{% if entity.createDate %}{{ entity.createDate|date('Y-m-d H:i:s') }}{% endif %}</td>
-                {#<td>{{ entity.description }}</td>#}
-                {#<td>{{ entity.homeworld }}</td>#}
-                <td>{{ entity.getRank.getName }} {{ entity.callsign }}</td>
-                {#<td>{{ entity.plotPoints }}</td>#}
-                <td>{{ entity.advancementPoints }}</td>
-                {#<td>{{ entity.woundRating }}</td>#}
-                {#<td>{{ entity.stunRating }}</td>#}
-                <td>
-                    <table>
-                        {% for attribute in entity.getAttributes %}
-                            <tr>
-                                <td>{{ attribute.getType }}</td>
-                                <td>
-                                {{ render(controller(
-                                        'CharacterBundle:Die:translateDie',
-                                        { 'step': attribute.getStep }
-                                        )) }}
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </table>
-                </td>
-
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('character_show', { 'id': entity.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('character_edit', { 'id': entity.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('character_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
-    {% endblock %}
-{% endblock %}
-
-<script type="text/javascript" src="/lib/jquery-1.11.2.min.js"></script>
-<script type="text/javascript" src="{{ asset('bundles/dashboard/javascript/dashboard.js')}}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/dashboard/javascript/dashboard.js') }}"></script>
+</html>
