--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/editP1Stats.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/editP1Stats.html.twig
@@ -1,6 +1,6 @@
 <div>{% include 'CharacterBundle:Edit:editAttributes.html.twig' %}</div>
-<div>Derived Attributes</div>
+<div>{% include 'CharacterBundle:Edit:showDerivedAttributesBlock.html.twig' %}</div>
 <div>Action Difficulty</div>
-<div>Advancement</div>
+<div>{% include 'CharacterBundle:Edit:showAdvancementBlock.html.twig' %}</div>
 <div>Advancement Costs</div>
 
