--- a/src/Silnin/BsgSheet/DashboardBundle/Resources/public/css/style.css
+++ b/src/Silnin/BsgSheet/DashboardBundle/Resources/public/css/style.css
@@ -62,3 +62,15 @@ a.fill-div {
 
 .attributes tr:nth-child(even) {
 }
+
+.headeredTable td {
+    padding-right: 20px;
+}
+
+.headeredTable tr:nth-child(odd) {
+
+}
+
+.headeredTable tr:nth-child(even) {
+    background-color: #ffffff;
+}
