--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/editCharacter.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/editCharacter.html.twig
@@ -4,14 +4,14 @@
 <div class="row characterEditorP1Top">
     <div class="col-sm-12">NAME / CALLSIGN etc</div>
 </div>
-<div class="row characterEditorBackground">space between</div>
+
 <div class="row">
     <div class="col-sm-6 characterEditorP1LeftColumn" ng-app="characterEditor" ng-controller="characterEditorLoader">
         <div class="row characterEditorBsgPane">
             <div class="characterEditorWoundsPane">
                 W/S
             </div>
-            <div class="characterEditorBackground">|</div>
+            <div class="characterEditorBackground"></div>
             <div class="characterEditorP1LeftStatsPane">
                 {% include 'CharacterBundle:Edit:editP1Stats.html.twig' %}
             </div>
