added first version of health bar

--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/editCharacter.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/editCharacter.html.twig
@@ -9,7 +9,7 @@
     <div class="col-sm-6 characterEditorP1LeftColumn" ng-app="characterEditor" ng-controller="characterEditorLoader">
         <div class="row characterEditorBsgPane">
             <div class="characterEditorWoundsPane">
-                W/S
+                {% include 'CharacterBundle:Edit:editWoundsAndStuns.html.twig' %}
             </div>
             <div class="characterEditorBackground"></div>
             <div class="characterEditorP1LeftStatsPane">
