added health bar buttons and functionality

--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/editP1Stats.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/editP1Stats.html.twig
@@ -1,3 +1,4 @@
+<div>{% include 'CharacterBundle:Edit:editWoundsAndStuns.html.twig' %}</div>
 <div>{% include 'CharacterBundle:Edit:editAttributes.html.twig' %}</div>
 <div>{% include 'CharacterBundle:Edit:showDerivedAttributesBlock.html.twig' %}</div>
 <div>{% include 'CharacterBundle:Edit:showActionDifficultyBlock.html.twig' %}</div>
