--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/showDerivedAttributesBlock.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/showDerivedAttributesBlock.html.twig
@@ -4,8 +4,9 @@
         <tr>
             <td>Life Points</td>
             <td>
-                <span class="badge" ng-model="attributeDice[3]">{[{ attributeDice[3] }]}</span>
-                <span class="badge" ng-model="attributeDice[6]">{[{ attributeDice[6] }]}</span>
+                <span>{[{ lifePoints }]}</span>
+                {#<span class="badge" ng-model="attributeDice[3]">{[{ attributeDice[3] }]}</span>#}
+                {#<span class="badge" ng-model="attributeDice[6]">{[{ attributeDice[6] }]}</span>#}
             </td>
         </tr>
         <tr>
@@ -18,15 +19,17 @@
         <tr>
             <td>Endurance</td>
             <td>
-                <span class="badge" ng-model="attributeDice[3]">{[{ attributeDice[3] }]}</span>
-                <span class="badge" ng-model="attributeDice[6]">{[{ attributeDice[6] }]}</span>
+                <span>{[{ endurance }]}</span>
+                {#<span class="badge" ng-model="attributeDice[3]">{[{ attributeDice[3] }]}</span>#}
+                {#<span class="badge" ng-model="attributeDice[6]">{[{ attributeDice[6] }]}</span>#}
             </td>
         </tr>
         <tr>
             <td>Resistance</td>
             <td>
-                <span class="badge" ng-model="attributeDice[3]">{[{ attributeDice[3] }]}</span>
-                <span class="badge" ng-model="attributeDice[3]">{[{ attributeDice[3] }]}</span>
+                <span>{[{ resistance }]}</span>
+                {#<span class="badge" ng-model="attributeDice[3]">{[{ attributeDice[3] }]}</span>#}
+                {#<span class="badge" ng-model="attributeDice[3]">{[{ attributeDice[3] }]}</span>#}
             </td>
         </tr>
     </table>
