--- a/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/editWoundsAndStuns.html.twig
+++ b/src/Silnin/BsgSheet/CharacterBundle/Resources/views/Edit/editWoundsAndStuns.html.twig
@@ -1,6 +1,4 @@
-<h2 class="tooltip-target">
-    Health
-</h2>
+<h2 class="tooltip-target">Health</h2>
 <div class="progress">
     <div class="progress-bar progress-bar-danger" role="progressbar" data-toggle="tooltip" data-placement="bottom" title="Wound Points" ng-style="{width : ( woundDamagePercentage + '%' ) }">
         {[{ wounds }]} W
@@ -12,7 +10,6 @@
         {[{ lifePoints - (wounds + stun) }]} / {[{ lifePoints }]} LP
     </div>
 </div>
-
 <div class="input-group">
     <input type="text" ng-model="myInputDamage" class="form-control">
     <span class="input-group-btn">
@@ -29,5 +26,3 @@
         <button type="button" class="glyphicon glyphicon-heart btn btn-primary btn-success" ng-click="healStun(myInputDamage);"> Stun</button>
     </span>
 </div>
-
-
